objects/BLN_Scanusr_item__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>BLN_Event__c</fullName>
        <label>BLN Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN Scanusr items</relationshipLabel>
        <relationshipName>BLN_Scanusr_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_GN_User__c</fullName>
        <label>BLN GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN Scanusr items</relationshipLabel>
        <relationshipName>BLN_Scanusr_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Item_Pool__c</fullName>
        <label>BLN Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipLabel>BLN Scanusr items</relationshipLabel>
        <relationshipName>BLN_Scanusr_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Scanusr item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BLN_Event__c</columns>
        <columns>BLN_GN_User__c</columns>
        <columns>BLN_Item_Pool__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Scanusr items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>